Switched JRE to 14 and removed warnings